# rust-shader-fun

./: Cargo.toml
src/: app.rs  color.rs  main.rs  renderer.rs
src/shaders/: triangle.wgsl
