[package]
name = "rust-shader-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-wgpu = { version = "0.21.0", features = ["winit"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
egui = "0.21.0"
egui-winit = "0.21.1"
tokio = { version = "1.27.0", features = ["full"] }
wgpu = "0.15.1"
winit = "0.28.3"
dashmap = "5.4.0"
notify = "5.1.0"
futures = "0.3.28"
notify-debouncer-mini = "0.2.1"
color-eyre = "0.6.2"
glam = { version = "0.23.0", features = ["bytemuck"] }
pollster = { version = "0.3.0", features = ["macro"] }
palette = { version = "0.7.1", features = ["bytemuck"] }
# winit = "0.26.0"
# wgpu = "0.12.0"
# egui-winit = "0.9.0"
# egui-wgpu = "0.9.0"
# tokio = { version = "1.0", features = ["full"] }
